# app/internal/pkg/models/auth.go
@@ -1,19 +1,24 @@
 package models
 
-import pb "github.com/Elderly-AI/ta_eos/pkg/proto/auth"
+import (
+	utills "github.com/Elderly-AI/ta_eos/internal/pkg/utils"
+	pb "github.com/Elderly-AI/ta_eos/pkg/proto/auth"
+)
 
 type SafeUser struct {
 	Name  string `json:"name,omitempty" db:"name"`
 	Email string `json:"email,omitempty" db:"email"`
 	Group string `json:"group,omitempty" db:"study_group"`
+	Role  string `json:"role,omitempty" db:"role"`
 }
 
 type User struct {
 	UserID   string `json:"user_id,omitempty" db:"user_id"`
-	Name     string `json:"name,omitempty" db:"name"`
-	Email    string `json:"email,omitempty" db:"email"`
-	Group    string `json:"group,omitempty" db:"study_group"`
-	Password string `json:"password,omitempty" db:"password"`
+	Name     string `json:"name,omitempty" db:"name" validate:"required,min=2,max=20"`
+	Email    string `json:"email,omitempty" db:"email" validate:"required,min=3,max=30"`
+	Group    string `json:"group,omitempty" db:"study_group" validate:"required,min=2,max=7"`
+	Password string `json:"password,omitempty" db:"password" validate:"required,min=2,max=40"`
+	Role     string `json:"role,omitempty" db:"role"`
 }
 
 func SafeUserFromUser(usr User) SafeUser {
@@ -24,14 +29,16 @@ func SafeUserFromUser(usr User) SafeUser {
 	}
 }
 
-func UserFromGrpc(usr *pb.User) User {
-	return User{
+func UserFromGrpc(usr *pb.User) (User, error) {
+	user := User{
 		UserID:   "",
 		Name:     usr.Name,
 		Email:    usr.Email,
 		Group:    usr.Group,
 		Password: usr.Password,
 	}
+	err := utills.ValidateStruct(user)
+	return user, err
 }
 
 func UserToGRPCSafeUser(usr User) *pb.SafeUser {
@@ -39,5 +46,16 @@ func UserToGRPCSafeUser(usr User) *pb.SafeUser {
 		Name:  usr.Name,
 		Email: usr.Email,
 		Group: usr.Group,
+		Role:  usr.Role,
+	}
+}
+
+func UsersToGRPCSafeUsers(usrs []User) *pb.SafeUsers {
+	res := make([]*pb.SafeUser, len(usrs))
+	for _, usr := range usrs {
+		res = append(res, UserToGRPCSafeUser(usr))
+	}
+	return &pb.SafeUsers{
+		Users: res,
 	}
 }
