# web/dist/swagger/proto.swagger.json
@@ -48,7 +48,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/authUser"
+              "$ref": "#/definitions/authSafeUser"
             }
           },
           "default": {
@@ -98,6 +98,42 @@
             "schema": {
               "$ref": "#/definitions/authRegisterRequest"
             }
+          }
+        ],
+        "tags": [
+          "Auth"
+        ]
+      }
+    },
+    "/api/v1/auth/search": {
+      "get": {
+        "operationId": "Auth_SearchUsers",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/authSafeUsers"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "name",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "group",
+            "in": "query",
+            "required": false,
+            "type": "string"
           }
         ],
         "tags": [
@@ -204,6 +240,20 @@
         },
         "group": {
           "type": "string"
+        },
+        "role": {
+          "type": "string"
+        }
+      }
+    },
+    "authSafeUsers": {
+      "type": "object",
+      "properties": {
+        "users": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/authSafeUser"
+          }
         }
       }
     },
